coloquei uma imagen

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Página de disciplina de Desenvolvimento web</h1>
-    <h2>Conteúdos</h2>
+    <h2>Conteúdo</h2>
+ <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQEc9A_S6BPxCDRp5WjMFEfXrpCu1ya2OO-Lw&s" alt="">
 </body>
 </html>
