--- a/index.html
+++ b/index.html
@@ -9,5 +9,17 @@
     <h1>Página de disciplina de Desenvolvimento web</h1>
     <h2>Conteúdo</h2>
  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQEc9A_S6BPxCDRp5WjMFEfXrpCu1ya2OO-Lw&s" alt="">
+ <ol>
+    <li>
+        <a href="pages/comandosbasicos.html">Comandos Básicos</a>
+    </li>
+    <li>
+        <a href="">Listas</a>
+    </li>
+    <li>
+        <a href="pages/Imagens.html">Imagens</a>
+    </li>
+ </ol>
+ 
 </body>
 </html>
